--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 				<article id="About ME">
 					<header>
 			    <h2>Here's my history.</h2>
-					<p><br class="bottom-two"> Name : DA YOUNG GONG </br></p>
-					<p><br class="bottom-two"> Age : 20 </br></p>
-					<p><br class="bottom-two"> Major : Digital Agriculture Tech </br></p>
-					<p><br class="bottom-two"> School : Jeonbuk National Univ </br></p>
+					<p><br class="bottom-two"> Name : DA YOUNG GONG </p>
+					<p><br class="bottom-two"> Age : 20 </p>
+					<p><br class="bottom-two"> Major : Digital Agriculture Tech </p>
+					<p><br class="bottom-two"> School : Jeonbuk National Univ </p>
 				</header>
 			<div class="container">
 		</article>
